Testing travis by changing the surefire plugin